--- a/css/style.css
+++ b/css/style.css
@@ -150,6 +150,13 @@ header img {
   font-weight: bold;
 }
 
+.attribution {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  transform: translateY(1rem);
+}
+
 @media (min-width: 0px) and (max-width: 376px) {
   .container {
     max-width: 100%;
